下層ページスタイル修正。

--- a/wp/wp-content/themes/wfn2017_dev/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017_dev/SCSS/page.scss
@@ -12,7 +12,7 @@
 		position: relative;
 // 		height: 357px;
 		//padding-top: 30px;
-		padding-bottom: 10px;
+		//padding-bottom: 10px;
 	}
 	
 	#signboard {
