--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -304,7 +304,7 @@ header {
 	.main-navigation .navigation-menu #primary-menu > li > a {
 		padding-right: 20px;
 		padding-left: 10px;
-		background: url(../images/navi_line.png) no-repeat right center;
+		//background: url(../images/navi_line.png) no-repeat right center;
 	}
 
 	.main-navigation .navigation-menu #primary-menu > li:hover > a {
