--- a/wp/wp-content/plugins/camptix/camptix.css
+++ b/wp/wp-content/plugins/camptix/camptix.css
@@ -93,6 +93,12 @@ body.admin-bar #tix {
 	clear: none;
 }
 
+.tix-attendee-linebreak:before {
+	content: "\A" ;
+	white-space: pre ;
+}
+
+
 .entry-content input,
 .entry-content select {
 	margin: 0 0 0 0;
@@ -189,3 +195,10 @@ body.admin-bar #tix {
 .rtl #tix-attendees .avatar { float: right; }
 
 .rtl #tix-attendees .tix-field { margin-left: 0; margin-right: 70px; }
+
+.tix-attendee-list__item{
+  padding-top: 1em;
+  padding-bottom: 1em;
+  vertical-align: middle;
+  min-height: 90px;
+}
