--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -86,6 +86,7 @@
 	.page-title {
 		font-size: $fs-26;
 		font-family: "じゅん 34", "Jun 34";
+		margin: 20px 0 0;
 		padding: 25px 10px 25px;
 		color: $primaryColor;
 		display: -webkit-box;
