--- a/wp/wp-content/themes/wfn2017_dev/css/page.css
+++ b/wp/wp-content/themes/wfn2017_dev/css/page.css
@@ -151,7 +151,7 @@
     color: #ea5514; }
   #main .section-inner h2 {
     background: #ea5514;
-    color: #ea5514; }
+    color: #fff; }
   #main .section-inner h3 {
     border-top: 2px solid #ea5514;
     border-bottom: 2px solid #ea5514; }
