--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -155,6 +155,8 @@ header {
 		background: $bgColor;
 	}
 */
+
+/*
 	&:nth-child(1) {
 		background: $bgColor;
 	}
@@ -171,6 +173,41 @@ header {
 	}
 	&:nth-child(5) {
 		background: #fff;
+	}
+*/
+	&#sec-about {
+		
+		background: $bgColor;
+	}
+	
+	&#sec-entry {
+		
+		background: #fff;
+		
+	}
+	
+	&#sec-schedule {
+		
+		background-image: url(../images/top/bg-schedule.svg) ;
+		background-position: center top;
+	}
+	
+	&#sec-pickup {
+		
+		background: #fff;
+
+	}
+	
+	&#sec-social {
+		
+		background: $bgColor;
+		
+	}
+	
+	&#sec-supporter {
+		
+		background: #fff;
+		
 	}
 	
 } // .section
