--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -77,11 +77,11 @@ header .bxslider li img { width: 100%; margin: 0; padding: 0; }
 
 .section-inner .button-box { margin: 30px 0; }
 
-.schedule { font-family: "じゅん 34", "Jun 34"; }
+.section-inner .schedule { font-family: "じゅん 34", "Jun 34"; }
 
-.schedule h3 { margin: 0; padding: 10px 5px; background: #e85524; line-height: 1.6; font-weight: normal; font-size: 1.43rem; color: #fff; }
+.section-inner .schedule h3 { margin: 0; padding: 10px 5px; background: #e85524; line-height: 1.6; font-weight: normal; font-size: 1.43rem; color: #fff; }
 
-.schedule p { color: #ea5514; }
+.section-inner .schedule p { color: #ea5514; }
 
 @media screen and (max-width: 767px) { header { /* .site-title { margin-top: 0; } */ /* #signboard { position: relative; top: 0; bottom: 0; width: 100%; height: auto; margin: 20px 0 0; } */ }
   header .main-image { height: auto; padding: 40px 10px 0; background: none; }
