--- a/wp/wp-content/themes/wfn2017/SCSS/supporter2.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/supporter2.scss
@@ -9,12 +9,18 @@
 		width: 100%;
 		max-width: $contentWidth;
 		margin: auto;
-	}
 	
+        .section-title {
+            font-family: 'Pocket-Calculator';
+        	color: #fff;
+        }
+	}
+
 	.supporter-contents {
 		margin-bottom: 50px;
 		
 		.supporter-title {
+    		font-family: "じゅん 34", "Jun 34";
 			
 			img {
 				width: 100%;
@@ -39,7 +45,8 @@
 			//width: 305px;
 			width: 100%;
 			height: 150px;
-			background: #f0f0f0;
+			//background: #f0f0f0;
+			background: #fff0f0;
 			
 			.title {
 				display: table-cell;
