--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -31,15 +31,8 @@ h1 {
 }
 
 h2 {
-  //2017
-/*
-	font-size: 5rem;
-	font-family: 'Pocket-Calculator';
-	color: $headlineColor;
-*/
 }
 
-// 2017 ->
 h3 {
     
 }
@@ -55,10 +48,16 @@ h5 {
 .box {
     
 }
-// <- 2017
 
 ul {
 	padding-left: 2em;
+}
+
+a:hover {
+    
+    img {
+        opacity: 0.6;
+    }
 }
 
 table {
