--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -8,9 +8,9 @@ h1, h2, h3, h4, h5, h6 { margin: 0 0 20px; padding: 0; font-weight: bold; }
 
 h1 { text-align: center; font-size: 2.14rem; }
 
-h2 { /* font-size: 5rem; font-family: 'Pocket-Calculator'; color: $headlineColor; */ }
-
 ul { padding-left: 2em; }
+
+a:hover img { opacity: 0.6; }
 
 table { width: 100%; /* th, td { padding: 10px; border: 1px solid #ccc; font-weight: normal; font-size: $fs-15; } th { text-align: center; } */ }
 
