トップページのサポータースタイル変更。

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -231,6 +231,16 @@ header {
 		
 	}
 	
+	&.supporter-section {
+    	
+    	.section-inner {
+        	
+        	.section-title {
+            	color: $headlineColor;
+        	}
+    	}
+	}
+	
 } // .section
 
 .section-inner {
