サポーター部分、スタイル修正。

--- a/wp/wp-content/themes/wfn2017/css/supporter.css
+++ b/wp/wp-content/themes/wfn2017/css/supporter.css
@@ -6,7 +6,7 @@
 
 .supporter-section .section-inner { width: 100%; max-width: 1000px; margin: auto; }
 
-.supporter-section .section-inner .section-title { font-family: 'Pocket-Calculator'; font-size: 5rem; color: #fff; }
+.supporter-section .section-inner .section-title { margin-bottom: 30px; background: none; font-family: 'Pocket-Calculator'; font-size: 5rem; color: #fff; }
 
 .supporter-section .supporter-contents { margin-bottom: 50px; }
 
