--- a/wp/wp-content/themes/wfn2017/SCSS/supporter.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/supporter.scss
@@ -11,6 +11,8 @@
 		margin: auto;
 	
         .section-title {
+	        margin-bottom: 30px;
+        	background: none;
             font-family: 'Pocket-Calculator';
             font-size: 5rem;
         	color: #fff;
